// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ============================================
// Enum Definitions
// ============================================

enum StudyPlanStatus {
  draft
  active
  archived
}

enum ConceptSource {
  ai_generated
  manual
  imported
}

enum ConceptStatus {
  active
  deprecated
}

enum AnalysisJobStatus {
  pending
  processing
  done
  failed
}

// --- Sprint 4: AI Examiner + Focus + Review Queue (I6.1 / #113) ---

enum InterviewSessionStatus {
  active
  paused
  completed
  abandoned
}

enum TurnVerdict {
  deep
  shallow
  wrong
}

enum QuestionType {
  recall
  application
  why
}

enum TurnSource {
  ai
  cache_fallback
}

enum FocusSessionStatus {
  running
  completed
  cancelled
}

enum ReviewReason {
  traceback
  spaced_repetition
  deadline_priority
  manual
}

enum ReviewItemStatus {
  pending
  accepted
  skipped
  done
}

// ============================================
// Model Definitions
// ============================================

/// Tài khoản người dùng (sinh viên)
model User {
  id             String   @id @default(uuid()) @db.Uuid
  email          String   @unique @db.VarChar(255)
  passwordHash   String   @map("password_hash") @db.VarChar(255)
  name           String?  @db.VarChar(100)
  pomodoroConfig Json     @default("{\"work\":25,\"short_break\":5,\"long_break\":15,\"cycles\":4,\"sound\":true}") @map("pomodoro_config")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  studyPlans        StudyPlan[]
  interviewSessions InterviewSession[]
  focusSessions     FocusSession[]

  @@map("users")
}

/// Kế hoạch ôn tập - chứa DAG các khái niệm
model StudyPlan {
  id               String          @id @default(uuid()) @db.Uuid
  userId           String          @map("user_id") @db.Uuid
  name             String          @db.VarChar(255)
  deadline         DateTime?
  status           StudyPlanStatus @default(active)
  dagAutoFixed     Boolean         @default(false) @map("dag_auto_fixed")
  tracebackEnabled Boolean         @default(true) @map("traceback_enabled")
  createdAt        DateTime        @default(now()) @map("created_at")
  updatedAt        DateTime        @updatedAt @map("updated_at")

  user              User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  concepts          Concept[]
  conceptEdges      ConceptEdge[]
  interviewSessions InterviewSession[]
  focusSessions     FocusSession[]
  reviewQueueItems  ReviewQueueItem[]

  @@index([userId])
  @@map("study_plans")
}

/// Khái niệm trong đồ thị kiến thức
/// Lưu ý: difficulty range [1-5], mastery_score range [0.0-1.0] -- enforce tại application layer (Zod)
model Concept {
  id           String        @id @default(uuid()) @db.Uuid
  planId       String        @map("plan_id") @db.Uuid
  name         String        @db.VarChar(255)
  difficulty   Int?          @default(1)
  masteryScore Float?        @map("mastery_score")
  lastTestedAt DateTime?     @map("last_tested_at")
  source       ConceptSource @default(ai_generated)
  status       ConceptStatus @default(active)
  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @updatedAt @map("updated_at")

  plan             StudyPlan         @relation(fields: [planId], references: [id], onDelete: Cascade)
  edgesFrom        ConceptEdge[]     @relation("EdgeFrom")
  edgesTo          ConceptEdge[]     @relation("EdgeTo")
  questionCaches   QuestionCache[]
  interviewTurns   InterviewTurn[]
  reviewQueueItems ReviewQueueItem[]

  @@index([planId])
  @@map("concepts")
}

/// Cạnh trong đồ thị DAG - biểu diễn quan hệ prerequisite
/// Lưu ý: Self-loop (fromConceptId = toConceptId) phải được validate tại application layer
model ConceptEdge {
  id            String @id @default(uuid()) @db.Uuid
  planId        String @map("plan_id") @db.Uuid
  fromConceptId String @map("from_concept_id") @db.Uuid
  toConceptId   String @map("to_concept_id") @db.Uuid

  plan        StudyPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  fromConcept Concept   @relation("EdgeFrom", fields: [fromConceptId], references: [id], onDelete: Cascade)
  toConcept   Concept   @relation("EdgeTo", fields: [toConceptId], references: [id], onDelete: Cascade)

  @@unique([planId, fromConceptId, toConceptId])
  @@index([planId])
  @@index([fromConceptId])
  @@index([toConceptId])
  @@map("concept_edges")
}

/// Job phân tích tài liệu bất đồng bộ (SP-06)
/// Lưu ý: planDraftId không có FK constraint vì plan draft có thể chưa tồn tại (async flow)
model AnalysisJob {
  id          String            @id @default(uuid()) @db.Uuid
  planDraftId String?           @map("plan_draft_id") @db.Uuid
  fileKey     String?           @map("file_key")
  status      AnalysisJobStatus @default(pending)
  retryCount  Int               @default(0) @map("retry_count")
  createdAt   DateTime          @default(now()) @map("created_at")
  completedAt DateTime?         @map("completed_at")

  @@index([planDraftId])
  @@index([status])
  @@map("analysis_jobs")
}

/// Cache câu hỏi pre-generated cho AI Examiner fallback (AE-05, AE-06)
/// Sprint 3 chỉ tạo bảng, việc populate data sẽ ở Sprint 4
model QuestionCache {
  id           String   @id @default(uuid()) @db.Uuid
  conceptId    String   @map("concept_id") @db.Uuid
  questionText String   @map("question_text")
  questionType String?  @map("question_type") @db.VarChar(50)
  answerHint   String?  @map("answer_hint")
  generatedAt  DateTime @default(now()) @map("generated_at")

  concept Concept @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  @@index([conceptId])
  @@map("question_cache")
}

/// Phiên vấn đáp AI Examiner (AE-01, AE-02, AE-03)
model InterviewSession {
  id                 String                 @id @default(uuid()) @db.Uuid
  userId             String                 @map("user_id") @db.Uuid
  planId             String                 @map("plan_id") @db.Uuid
  status             InterviewSessionStatus @default(active)
  conceptQueue       Json                   @map("concept_queue") // string[] conceptId theo thứ tự ưu tiên
  currentConceptIdx  Int                    @default(0) @map("current_concept_idx")
  maxTurnsPerConcept Int                    @default(3) @map("max_turns_per_concept") // C6
  fallbackMode       Boolean                @default(false) @map("fallback_mode")
  summaryText        String?                @map("summary_text")
  startedAt          DateTime               @default(now()) @map("started_at")
  endedAt            DateTime?              @map("ended_at")
  createdAt          DateTime               @default(now()) @map("created_at")
  updatedAt          DateTime               @updatedAt @map("updated_at")

  user  User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan  StudyPlan       @relation(fields: [planId], references: [id], onDelete: Cascade)
  turns InterviewTurn[]

  @@index([userId])
  @@index([planId])
  @@index([status])
  @@map("interview_sessions")
}

/// Một lượt hỏi-đáp trong phiên (AE-02)
model InterviewTurn {
  id           String        @id @default(uuid()) @db.Uuid
  sessionId    String        @map("session_id") @db.Uuid
  conceptId    String        @map("concept_id") @db.Uuid
  turnIndex    Int           @map("turn_index") // 1..maxTurnsPerConcept
  questionText String        @map("question_text")
  questionType QuestionType? @map("question_type")
  answerText   String?       @map("answer_text")
  score        Float? // 0.0 - 1.0 (enforce ở Zod)
  feedback     String?
  verdict      TurnVerdict?
  source       TurnSource    @default(ai)
  askedAt      DateTime      @default(now()) @map("asked_at")
  answeredAt   DateTime?     @map("answered_at")

  session InterviewSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  concept Concept          @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // audit A2: idempotency cho POST /answers (I6.3) — double-submit không tạo 2 turn
  @@unique([sessionId, conceptId, turnIndex])
  @@index([sessionId])
  @@index([conceptId])
  @@map("interview_turns")
}

/// Phiên học Pomodoro (FS-01, FS-03)
model FocusSession {
  id              String             @id @default(uuid()) @db.Uuid
  userId          String             @map("user_id") @db.Uuid
  planId          String?            @map("plan_id") @db.Uuid
  conceptIds      Json               @map("concept_ids") // string[]
  status          FocusSessionStatus @default(running)
  durationMinutes Int                @default(0) @map("duration_minutes") // thời gian HỌC thực tế, không tính pause
  startedAt       DateTime           @default(now()) @map("started_at")
  endedAt         DateTime?          @map("ended_at")

  user User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan StudyPlan? @relation(fields: [planId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("focus_sessions")
}

/// Hàng đợi ôn tập do Scheduling & Remediation Engine sinh ra (AE-07, DB-04, FS-06)
model ReviewQueueItem {
  id              String           @id @default(uuid()) @db.Uuid
  planId          String           @map("plan_id") @db.Uuid
  conceptId       String           @map("concept_id") @db.Uuid
  priority        Float            @default(0)
  reason          ReviewReason
  sourceConceptId String?          @map("source_concept_id") @db.Uuid // khái niệm C đã kích hoạt traceback (không FK — chỉ tham chiếu)
  sourceSessionId String?          @map("source_session_id") @db.Uuid // audit A1: phiên Interview kích hoạt (I7.2 chống trùng, I6.5 lọc theo phiên)
  depth           Int? // 1 hoặc 2 (max_depth = 2)
  status          ReviewItemStatus @default(pending)
  scheduledFor    DateTime?        @map("scheduled_for")
  createdAt       DateTime         @default(now()) @map("created_at")

  plan    StudyPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  concept Concept   @relation(fields: [conceptId], references: [id], onDelete: Cascade)

  // audit A1: chống trùng ReviewQueueItem theo phiên (I7.2 upsert theo cặp này)
  @@unique([sourceSessionId, conceptId])
  @@index([planId, status])
  @@map("review_queue_items")
}

// ============================================
// Deferred Models (sẽ implement ở Sprint 5)
// ============================================
// - SessionNote: FS-05 ghi chú nhanh (Sprint 5)
// - GradingFeedback: AE-10 phản hồi điểm (Sprint 5)
